# metal-matmul

./: CMakeLists.txt  LICENSE  README.md
cpp/: benchmark.cpp
debug/: debug_idx.py
metal/: 0_naive.metal  1_shared_mem.metal  2_block_tiling.metal  3_float4x4.metal  param.metal
swift/: matmul.swift
